--- a/Trips/package.json
+++ b/Trips/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "uuid": "^8.3.2"
   }
 }
