--- a/Blogs/package.json
+++ b/Blogs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogs_database",
+  "name": "blogs",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mustache-express": "^1.3.0",
-    "pg-promise": "^10.9.5"
+    "pg": "^8.5.1",
+    "sequelize": "^6.6.2"
   }
 }
